# ir_sensors

./: .gitignore  CMakeLists.txt  package.xml
calibration/: Matlab_curvefitting.sfit  ir_cali_sensors13.csv  ir_cali_sensors13.txt  ir_cali_sensors24.csv  ir_cali_sensors24.txt  ir_sensor5_front.csv  ir_sensor5_front.txt  parameters.txt
launch/: ir_calibration.launch
src/: ir_cali_sensors13.txt  ir_cali_sensors24.txt  ir_calibration.cpp  ir_sensor5_front.txt  ir_sensors.cpp
