<?xml version="1.0"?>
<package>
  <name>ir_sensors</name>
  <version>0.0.0</version>
  <description>The ir_sensors package</description>

  <license>BSD</license>

  <maintainer email="johanj4@kth.se">Johan Johansson</maintainer>
  <author email="johanj4@kth.se">Johan Johansson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
